# agent-mes

./: .gitignore  Makefile  README.md  pyproject.toml
.demo/: memory_log.jsonl
.demo/outputs/: email-TKT-002.md  postmortem-TKT-002.md
agent_mes/: __init__.py  __main__.py  artifacts.py  cli.py  interfaces.py  pipeline.py  schema.py
agent_mes/demo/: fake_slack.py  poison_payload.py  seed_entities.py  seed_memories.py
agent_mes/integrations/: blaxel_live.py  codex.py  context_surfaces_models.py  demo_patches.py  plushpalace_context.py  redis_backend.py  wordware.py
agent_mes/integrations/stubs/: blaxel.py  context_retriever.py  redis_memory.py
agent_mes/stages/: base.py  build.py  deploy.py  design.py  document.py  plan.py  review.py  test.py
agent_mes/ui/: dashboard.py  lanes.py
agent_mes/web/: __init__.py  events.py  gates.py  server.py
demo-runs/: tkt-001-20260411-165910.md  tkt-001-20260411-171103.md  tkt-001-20260411-174230.md
demo-runs/code-template/: README.md
demo-runs/code-template/auth/: middleware.py
demo-runs/runs/tkt-001-20260411-175108/: README.md  fix.diff
demo-runs/runs/tkt-001-20260411-175108/auth/: middleware.py
docs/: demo-screenshot.txt
docs/runs/: agentmes-run.md  agentmes-web-run.md
docs/specs/: agentmes-context.md  agentmes-forge.json  agentmes-research.md  agentmes-web-context.md  agentmes-web-forge.json  agentmes-web-yolo.md  agentmes-web.md  agentmes-yolo.md  agentmes.md  redesign-fable-2026-06-11.md
recordings/: codex_build_run.cast  full-demo.cast
research/: blaxel-deep-dive.md  codex-deep-dive.md  judges-intel.md  redis-context-deep-dive.md  redis-memory-deep-dive.md  state-2026-04-11.md  wordware-deep-dive.md
tests/: conftest.py  test_build_stage.py  test_codex.py  test_demo_fixtures.py  test_deploy_stage.py  test_design_stage.py  test_document_stage.py  test_events.py  test_gates.py  test_hardening.py  test_lanes.py  test_pipeline.py  test_plan_stage.py  test_review_stage.py  test_sanity.py  test_schema.py  test_smoke.py  test_state_machine.py  test_stub_blaxel.py  test_stub_context_retriever.py  test_stub_redis_memory.py  test_test_stage.py  test_web.py  test_wordware.py
web/: app.js  full-demo.cast  index.html  replay.html  style.css
