[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-mes"
version = "0.1.0"
description = "AgentMES — manufacturing execution system for autonomous agents (Blaxel × Codex × Redis hackathon, Wordware HQ, 2026-04-11)"
authors = [{name = "Ben"}]
requires-python = ">=3.12"
dependencies = [
    "rich>=14",
    "pydantic>=2",
    "httpx>=0.28",
    "typer>=0.24",
    "fastapi>=0.115",
    "sse-starlette>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
# Real Redis backend for the /redis dashboard and the long-term memory store.
# Optional: the app degrades to stub memory + an "offline" dashboard chip when
# absent. Declared here so `uv sync`/`pip` install it deterministically when
# requested instead of silently pruning an undeclared dependency.
redis = [
    "redis>=5.0",
]
# Real Blaxel sandbox verifier (live microVMs). NOT installed on the public
# zero-token demo — TestStage falls back to the deterministic stub when the SDK
# is absent, and /api/mode reports blaxel_live:false accordingly.
live = [
    "blaxel",
]

[project.scripts]
agent-mes = "agent_mes.cli:app"

[tool.setuptools.packages.find]
include = ["agent_mes*"]
exclude = ["tests*", "docs*", "research*", "recordings*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
